--- a/src/app/components/familias/familias.component.html
+++ b/src/app/components/familias/familias.component.html
@@ -1,10 +1,10 @@
 <div class="wrap">
   <div class="board">
     <div class="board__header">
-      <button mat-raised-button class="btn-blue" (click)="openAdd()">
-        + Agregar familia
-      </button>
-
+      <button mat-raised-button color="primary" (click)="openAdd()">+ Agregar familia</button>
+  <div class="footer">
+    <button mat-stroked-button color="primary" (click)="regresar()">Regresar</button>
+  </div>
       <mat-form-field appearance="outline" class="search">
         <mat-label>Buscar</mat-label>
         <input matInput [formControl]="search" />
@@ -17,24 +17,21 @@
     <div class="board__title">Familia</div>
 
     <table mat-table [dataSource]="data" class="table">
-      <!-- # -->
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>#</th>
         <td mat-cell *matCellDef="let el; let i = index">{{ i + 1 }}</td>
       </ng-container>
 
-      <!-- Nombre -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nombre de familia</th>
-        <td mat-cell *matCellDef="let el">{{ el.name }}</td>
+        <td mat-cell *matCellDef="let el">{{ el.nombre }}</td>
       </ng-container>
 
-      <!-- Acciones -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let el">
-          <button mat-raised-button class="btn-orange" (click)="openEdit(el)">Editar</button>
-          <button mat-raised-button color="warn" (click)="remove(el.id)">✗ Eliminar</button>
+          <button mat-stroked-button color="primary" (click)="openEdit(el)">Editar</button>
+          <button mat-raised-button color="warn" (click)="remove(el.id)">Eliminar</button>
         </td>
       </ng-container>
 
