--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -15,13 +15,27 @@
 
   <div class="table">
     <table mat-table [dataSource]="filtered">
+      
+      <!-- Columna nombre -->
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let r">{{ r.nombre }}</td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['nombre']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['nombre']"></tr>
+      <!-- Columna acciones -->
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-stroked-button color="primary" (click)="verFicha(row.id, row.nombre)">
+            Ver ficha
+          </button>
+        </td>
+      </ng-container>
+
+      <!-- Encabezados -->
+      <tr mat-header-row *matHeaderRowDef="['nombre', 'acciones']"></tr>
+      <!-- Filas -->
+      <tr mat-row *matRowDef="let row; columns: ['nombre', 'acciones']"></tr>
     </table>
   </div>
 
