Se modifican estilos
Se modifican estilos

--- a/src/app/components/liderazgo/liderazgo.component.html
+++ b/src/app/components/liderazgo/liderazgo.component.html
@@ -28,10 +28,8 @@
       </div>
     </div>
   </div>
+  <br>
+      <button mat-stroked-button color="primary" (click)="regresarDashboard()">Regresar</button>
 </div>
-<!-- Botón regresar -->
-<div class="ldr__footer">
-  <button mat-stroked-button color="accent" class="btn-back" (click)="regresarDashboard()">
-    <mat-icon>arrow_back</mat-icon> Regresar
-  </button>
-</div>
+
+
