--- a/src/app/components/planificacion/planificacion-eventos/planificacion-eventos.component.html
+++ b/src/app/components/planificacion/planificacion-eventos/planificacion-eventos.component.html
@@ -65,6 +65,7 @@
         <td mat-cell *matCellDef="let r">
           <button mat-raised-button class="btn-amber" (click)="abrirAsistencia(r)">Asistencia</button>
           <button mat-raised-button color="primary" (click)="abrirObservacion(r)">Observación</button>
+          <button mat-raised-button color="accent" (click)="abrirOfrenda(r)">Ofrenda</button>
         </td>
       </ng-container>
 
