--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -29,6 +29,11 @@
           <button mat-stroked-button color="primary" (click)="verFicha(row.id, row.nombre)">
             Ver ficha
           </button>
+
+          <button mat-stroked-button color="accent" (click)="crearUsuarioPara(row)">
+  Crear usuario
+</button>
+
         </td>
       </ng-container>
 
