--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -57,7 +57,7 @@
     <!-- Si no hay tiles -->
     <ng-template #sinAcceso>
       <div class="no-access">
-        <p>No tiene asignado ningún rol asignado.</p>
+        <p>No tienes ningún rol asignado.</p>
       </div>
     </ng-template>
 
