--- a/src/app/components/planificacion/planificacion-eventos/planificacion-eventos.component.html
+++ b/src/app/components/planificacion/planificacion-eventos/planificacion-eventos.component.html
@@ -59,6 +59,14 @@
         <td mat-cell *matCellDef="let r">{{ r.totalAsistencias ?? '—' }}</td>
       </ng-container>
 
+            <!-- Nueva columna para Total ofrenda -->
+      <ng-container matColumnDef="totalOfrenda">
+        <th mat-header-cell *matHeaderCellDef>Total ofrenda</th>
+        <td mat-cell *matCellDef="let r">
+          {{ r.totalOfrenda ? ('Q ' + (r.totalOfrenda | number:'1.2-2')) : '—' }}
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let r">
