--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -32,6 +32,12 @@
                 <path d="M8 12a3 3 0 1 1 0-6 3 3 0 0 1 0 6Zm8 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" fill="none" stroke="currentColor" stroke-width="1.8"/>
                 <path d="M3 20a5 5 0 0 1 5-5h0a5 5 0 0 1 5 5M11 20a5 5 0 0 1 5-5h0a5 5 0 0 1 5 5" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
               </svg>
+                    <!-- FINANZAS-->
+              <svg *ngSwitchCase="'finanzas'" viewBox="0 0 24 24">
+                <circle cx="10" cy="10" r="6" fill="none" stroke="currentColor" stroke-width="1.8"/>
+                <path d="M9 7h2M9 10h3M9 13h2" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
+                <path d="M16 14l4-2v8h-8l4-6z" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
+              </svg> 
               <svg *ngSwitchCase="'planificacion'" viewBox="0 0 24 24">
                 <rect x="4" y="4" width="14" height="16" rx="2" fill="none" stroke="currentColor" stroke-width="1.8"/>
                 <path d="M8 2v4M14 2v4M6 10h10M6 14h6" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
