--- a/src/app/components/finanzas/finanzas.component.html
+++ b/src/app/components/finanzas/finanzas.component.html
@@ -38,7 +38,7 @@
 
     <!-- fila 2: botón izq + buscador der -->
     <div class="tre__toolbar">
-      <button class="btn btn--primary" (click)="openAddTreasury()">+ Agregar Tesorería</button>
+      <button class="btn btn--primary" (click)="openAddTesoreria()">+ Agregar Tesorería</button>
 
       <div class="search">
         <mat-icon>search</mat-icon>
